// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Other tests "Riminder" object relative tests it should throw an error when no key is given 1`] = `"No API Key was supplied for Riminder SDK"`;

exports[`Other tests http module relative tests It should throw an error if the error code is not 200 or 201 1`] = `[Error: An error occured]`;

exports[`Wrapper test Filter endpoints It should call the get filters endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/filters",
    "path": "/sf/public/api/v1.0/filters",
    "pathname": "/sf/public/api/v1.0/filters",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Filter endpoints It sould call the get filter endpoint with the filter id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/filter?filter_id=filter_id",
    "path": "/sf/public/api/v1.0/filter?filter_id=filter_id",
    "pathname": "/sf/public/api/v1.0/filter",
    "port": null,
    "protocol": "https:",
    "query": "filter_id=filter_id",
    "search": "?filter_id=filter_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Filter endpoints It sould call the get filter endpoint with the filter reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/filter?filter_reference=filter_reference",
    "path": "/sf/public/api/v1.0/filter?filter_reference=filter_reference",
    "pathname": "/sf/public/api/v1.0/filter",
    "port": null,
    "protocol": "https:",
    "query": "filter_reference=filter_reference",
    "search": "?filter_reference=filter_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile document endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/documents?source_id=source_id&profile_id=profile_id",
    "path": "/sf/public/api/v1.0/profile/documents?source_id=source_id&profile_id=profile_id",
    "pathname": "/sf/public/api/v1.0/profile/documents",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile document endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/documents?source_id=source_id&profile_reference=profile_reference",
    "path": "/sf/public/api/v1.0/profile/documents?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/sf/public/api/v1.0/profile/documents",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile?source_id=source_id&profile_id=profile_id",
    "path": "/sf/public/api/v1.0/profile?source_id=source_id&profile_id=profile_id",
    "pathname": "/sf/public/api/v1.0/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile?source_id=source_id&profile_reference=profile_reference",
    "path": "/sf/public/api/v1.0/profile?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/sf/public/api/v1.0/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/parsing?source_id=source_id&profile_id=profile_id",
    "path": "/sf/public/api/v1.0/profile/parsing?source_id=source_id&profile_id=profile_id",
    "pathname": "/sf/public/api/v1.0/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "path": "/sf/public/api/v1.0/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/sf/public/api/v1.0/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profiles endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profiles?source_ids=[source1,source2]&date_start=1234&date_end=1456&page=1&seniority=ALL&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=DESC&order_by=RECEPTION",
    "path": "/sf/public/api/v1.0/profiles?source_ids=[source1,source2]&date_start=1234&date_end=1456&page=1&seniority=ALL&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=DESC&order_by=RECEPTION",
    "pathname": "/sf/public/api/v1.0/profiles",
    "port": null,
    "protocol": "https:",
    "query": "source_ids=[source1,source2]&date_start=1234&date_end=1456&page=1&seniority=ALL&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=DESC&order_by=RECEPTION",
    "search": "?source_ids=[source1,source2]&date_start=1234&date_end=1456&page=1&seniority=ALL&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=DESC&order_by=RECEPTION",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile id and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/rating",
    "path": "/sf/public/api/v1.0/profile/rating",
    "pathname": "/sf/public/api/v1.0/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile id and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/rating",
    "path": "/sf/public/api/v1.0/profile/rating",
    "pathname": "/sf/public/api/v1.0/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile reference and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/rating",
    "path": "/sf/public/api/v1.0/profile/rating",
    "pathname": "/sf/public/api/v1.0/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile reference and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/rating",
    "path": "/sf/public/api/v1.0/profile/rating",
    "pathname": "/sf/public/api/v1.0/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile id and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/stage",
    "path": "/sf/public/api/v1.0/profile/stage",
    "pathname": "/sf/public/api/v1.0/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile id and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/stage",
    "path": "/sf/public/api/v1.0/profile/stage",
    "pathname": "/sf/public/api/v1.0/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile reference and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/stage",
    "path": "/sf/public/api/v1.0/profile/stage",
    "pathname": "/sf/public/api/v1.0/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile reference and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile/stage",
    "path": "/sf/public/api/v1.0/profile/stage",
    "pathname": "/sf/public/api/v1.0/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the post resume endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/profile",
    "path": "/sf/public/api/v1.0/profile",
    "pathname": "/sf/public/api/v1.0/profile",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get source endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/source?source_id=id",
    "path": "/sf/public/api/v1.0/source?source_id=id",
    "pathname": "/sf/public/api/v1.0/source",
    "port": null,
    "protocol": "https:",
    "query": "source_id=id",
    "search": "?source_id=id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get sources endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://www.riminder.net/sf/public/api/v1.0/sources",
    "path": "/sf/public/api/v1.0/sources",
    "pathname": "/sf/public/api/v1.0/sources",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;
